# ChangeLog for sci-chemistry/probe
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/probe/ChangeLog,v 1.18 2012/07/10 17:59:09 ranger Exp $

  10 Jul 2012; Brent Baude <ranger@gentoo.org> probe-2.12.110413.ebuild:
  Marking probe-2.12.110413 ppc for bug 419869

  13 Jun 2012; Jeff Horelick <jdhore@gentoo.org> probe-2.12.110413.ebuild:
  marked x86 per bug 419869

  11 Jun 2012; Agostino Sarubbo <ago@gentoo.org> probe-2.12.110413.ebuild:
  Stable for amd64, wrt bug #419869

*probe-2.13.110909 (06 Jun 2012)

  06 Jun 2012; Justin Lecher <jlec@gentoo.org> +probe-2.13.110909.ebuild,
  +files/probe-2.13.110909-as-needed.patch:
  Version BUmp

  06 Jun 2012; Justin Lecher <jlec@gentoo.org> probe-2.12.110413.ebuild:
  minor cleaning

  21 Nov 2011; Justin Lecher <jlec@gentoo.org> probe-2.12.110413.ebuild:
  keyworded for ~x86-macos ~x64-macos, tested by Johan Hattne #390123

  26 Jun 2011; Justin Lecher <jlec@gentoo.org> probe-2.11.050121.ebuild,
  probe-2.12.071128.ebuild, probe-2.12.071128-r1.ebuild,
  probe-2.12.110413.ebuild, metadata.xml:
  Straight out QA issues

*probe-2.12.110413 (06 May 2011)

  06 May 2011; Justin Lecher <jlec@gentoo.org>
  +files/2.12.110413-as-needed.patch, +probe-2.12.110413.ebuild:
  Version Bump, notified by euscan

*probe-2.12.071128-r1 (06 Jul 2010)

  06 Jul 2010; Justin Lecher <jlec@gentoo.org> probe-2.12.071128.ebuild,
  +probe-2.12.071128-r1.ebuild, +files/as-needed.patch:
  As-needed fix

  28 Jun 2010; Justin Lecher <jlec@gentoo.org> probe-2.12.071128.ebuild:
  Keyworded for linux prefix, some QA (die missing)

  29 May 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  probe-2.12.071128.ebuild:
  Stable on amd64.

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  probe-2.12.071128.ebuild:
  Fix minor syntax errors.

*probe-2.12.071128 (08 Jul 2008)

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +probe-2.12.071128.ebuild: